# silent-hill-demo

./: CMakeLists.txt  LICENSE  README.md
include/: Game.h  Player.h  Window.h
src/: Game.cpp  Player.cpp  Window.cpp  main.cpp
